[tool.poetry]
name = "banking"
version = "0.1.0"
description = ""
authors = ["Shaibu Shaibu <s.shaibu.jnr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.2.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
